# mutliturn-inferenceX

./: .gitignore  README.md  build_dashboard.py  build_graph.py  cache_warmup.html  claude_runner.py  context_growth.html  judge.py  launch_disagg_c128.sh  push_hf.py  pyproject.toml  relaunch_sglang.sh  reward_hacking.py  run.sh  run_disagg.md  run_dsv4_replay.sbatch  run_dsv4_replay_c128.sbatch  run_dsv4_sglang_replay.sbatch  run_dsv4_sglang_replay_c128.sbatch  run_kimi_replay.sbatch  run_kimi_replay_c128.sbatch  run_kimi_sglang_replay.sbatch  run_kimi_sglang_replay_c128.sbatch  solve.py  system_prompt.md  test.json  to_hf.py  tool_call_time.html  verify_env.py  watch_disagg.sh  watch_jobs.sh  watch_sglang_relaunch.sh
charts/: dashboard.html  token_economy.html  ttft_context.html
replay/: README.md  _tok_probe.py  audit_prom_truth.py  batch_1.replay.jsonl  make_inferencex_dump.py  make_inferencex_dump_minimax.py  make_inferencex_dump_prom.py  make_variants.py  per_problem_turns.txt  plot_p95_ci.py  raw_ci.py  replay_bench.py  sweep_pareto.py  tool_calls_per_session.txt  verify_dump_accuracy.py
replay-minimax/: README.md  gpu_metrics.py  metrics.py  mm25-agg-6878.out  mm25-agg-bb-6950.out  mm25-agg-bb-6951.out  mm25-agg-noep-6897.out  mm25-agg-sglang-6876.out  mm25-agg-sglang-ep-6896.out  recompute_steady.py  replay_bench.py  requirements.txt  run_agg.sbatch  run_agg_bigbatch.sbatch  run_agg_noep.sbatch  run_agg_sglang.sbatch  run_agg_sglang_ep.sbatch  serve_agg.sh  serve_agg_bigbatch.sh  serve_agg_noep.sh  serve_agg_sglang.sh  serve_agg_sglang_ep.sh  sweep.py
(+1596 files in other folders)
